DX: Use more functional Vitepress as static documentation generator

--- a/docs/routes/1. Guide/1.3. SF2 structure.md
+++ b/docs/routes/1. Guide/1.3. SF2 structure.md
@@ -1,37 +1,36 @@
-# SoundFont3 Structure
+---
+prev:
+  text: 1.2. Basic usage
+  link: /routes/1.%20Guide/1.2.%20Basic%20usage.html
+next:
+  text: 2. API
+  link: /routes/2.%20API/README.html
+---
 
-This section explains a bit about the general SoundFont3 structure. It's not necessarily required to know this information in order to use the library, but it may make it easier to understand how the library and SoundFonts work.
+# SoundFont2 Structure
 
-## Table of Contents
+This section explains a bit about the general SoundFont2 structure. It's not necessarily required to know this information in order to use the library, but it may make it easier to understand how the library and SoundFonts work.
 
-* [General Structure](#general-structure)
-* [RIFF Chunks](#riff-chunks)
-  * [`INFO` Chunk](#info-chunk)
-  * [`smpl` Chunk](#smpl-chunk)
-  * [`pdta` Chunk](#pdta-chunk)
-    * [Preset Data](#preset-data)
-    * [Instrument Data](#instrument-data)
-    * [Sample Data](#sample-data)
-* [Presets](#presets)
-* [Instruments](#instruments)
-    
 ## General Structure
 
 A SoundFont has one or more presets, which can normally be selected with the `MIDI Program Change` command. The presets have one or more preset zones, that have one instrument. The instruments have instrument zones and these have one sample each.
 
 Multiple preset zones can refer to the same instrument and multiple instrument zones can refer to the same samples.
 
+<div style="background:WhiteSmoke;padding:1em;border-radius:1em;">
+
 ![General Structure](https://i.imgur.com/c2Gud3u.png)
+</div>
 
 ## RIFF Chunks
 
-A SoundFont3 file is a RIFF (Resource Interchange File Format) file, which contains multiple chunks. Those chunks are identified by a [FourCC (four-character code)](https://en.wikipedia.org/wiki/FourCC). If an identifier is not for characters long, it will be padded by spaces. For example, "foo" would be read as "foo ".
+A SoundFont2 file is a RIFF (Resource Interchange File Format) file, which contains multiple chunks. Those chunks are identified by a [FourCC (four-character code)](https://en.wikipedia.org/wiki/FourCC). If an identifier is not for characters long, it will be padded by spaces. For example, "foo" would be read as "foo ".
 
-Every SoundFont3 file should have at least three top-level sub-chunks: an `INFO` chunk containing metadata, a `sdta` chunk containing Wave Audio (WAV) samples and a `pdta` header containing the preset, instrument and sample headers.
+Every SoundFont2 file should have at least three top-level sub-chunks: an `INFO` chunk containing metadata, a `sdta` chunk containing Wave Audio (WAV) samples and a `pdta` header containing the preset, instrument and sample headers.
 
-All the raw (unparsed) data is available in the `SoundFont3` class, as `metaData`, `sampleData` and `presetData`.
+All the raw (unparsed) data is available in the `SoundFont2` class, as `metaData`, `sampleData` and `presetData`.
 
-![SoundFont3 RIFF chunks](https://i.imgur.com/BL8FvcC.png)
+![SoundFont2 RIFF chunks](https://i.imgur.com/BL8FvcC.png)
 
 ### `INFO` Chunk
 
