--- a/docs/routes/2. API/2.1. SoundFont3/2.1.2. Sample/2.1.2.1. SampleHeader.md
+++ b/docs/routes/2. API/2.1. SoundFont3/2.1.2. Sample/2.1.2.1. SampleHeader.md
@@ -25,13 +25,9 @@ This name should be unique.
 
 * [&lt;number&gt;](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type) - The start of the sample data in the `smpl` chunk.
 
-Note that the sample data in the [`Sample`](README.md) object is already the correct sample data.
-
 ## `SampleHeader.end`
 
 * [&lt;number&gt;](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures#Number_type) - The end of the sample data in the `smpl` chunk.
-
-Note that the sample data in the [`Sample`](README.md) object is already the correct sample data.
 
 ## `SampleHeader.startLoop`
 
@@ -69,4 +65,4 @@ Both samples should be played at the same time, with the pitch being controlled 
 
 ## `SampleHeader.type`
 
-* [&lt;SampleType&gt;](sample-type.md) - The type of the sample.
+* &lt;SampleType&gt; - The type of the sample.
