DX: Link static documentation pages together

--- a/docs/routes/1. Guide/1.3. SF2 structure.md
+++ b/docs/routes/1. Guide/1.3. SF2 structure.md
@@ -3,8 +3,8 @@ prev:
   text: 1.2. Basic usage
   link: /routes/1.%20Guide/1.2.%20Basic%20usage.html
 next:
-  text: 2. API
-  link: /routes/2.%20API/README.html
+  text: 2.1. SoundFont3
+  link: /routes/2.%20API/2.1.%20SoundFont3/README.html
 ---
 
 # SoundFont2 Structure
