--- a/docs/routes/2. API/2.1. SoundFont3/2.1.1. Key.md
+++ b/docs/routes/2. API/2.1. SoundFont3/2.1.1. Key.md
@@ -1,3 +1,12 @@
+---
+prev:
+  text: 2.1. SoundFont3
+  link: /routes/2.%20API/2.1.%20SoundFont3/README.html
+next:
+  text: 2.1.2.1. SampleHeader
+  link: /routes/2.%20API/2.1.%20SoundFont3/2.1.2.%20Sample/2.1.2.1.%20SampleHeader.html
+---
+
 # KeyData
 
 ## Table of Contents
