--- a/docs/routes/2. API/2.1. SoundFont3/2.1.2. Sample/2.1.2.1. SampleHeader.md
+++ b/docs/routes/2. API/2.1. SoundFont3/2.1.2. Sample/2.1.2.1. SampleHeader.md
@@ -1,3 +1,12 @@
+---
+prev:
+  text: 2.1.1. Key
+  link: /routes/2.%20API/2.1.%20SoundFont3/2.1.1.%20Key.html
+next:
+  text: 2.1.2.2. SampleType
+  link: /routes/2.%20API/2.1.%20SoundFont3/2.1.2.%20Sample/2.1.2.2.%20SampleType.html
+---
+
 # SampleHeader
 
 The `SampleHeader` object contains all the meta data for a sample.
