--- a/docs/routes/2. API/2.1. SoundFont3/2.1.2. Sample/2.1.2.2. SampleType.md
+++ b/docs/routes/2. API/2.1. SoundFont3/2.1.2. Sample/2.1.2.2. SampleType.md
@@ -1,3 +1,12 @@
+---
+prev:
+  text: 2.1.2.1. SampleHeader
+  link: /routes/2.%20API/2.1.%20SoundFont3/2.1.2.%20Sample/2.1.2.1.%20SampleHeader.html
+next:
+  text: 3.1. Onboarding
+  link: /routes/3.%20Development/3.1.%20Onboarding.html
+---
+
 # SampleType
 
 `SampleType` is an [enum](https://www.typescriptlang.org/docs/handbook/enums.html) with all the possible sample types.
