--- a/docs/routes/3. Development/3.1. Onboarding.md
+++ b/docs/routes/3. Development/3.1. Onboarding.md
@@ -1,3 +1,12 @@
+---
+prev:
+  text: 2.1.2.2. SampleType
+  link: /routes/2.%20API/2.1.%20SoundFont3/2.1.2.%20Sample/2.1.2.2.%20SampleType.html%20Key.html
+next:
+  text: 3.2. Todo
+  link: /routes/3.%20Development/3.2.%20Todo.html
+---
+
 # Onboarding
 
 The library uses `Node.js`, `TypeScript` and `Webpack` for development, `Jest` to run unit tests, `ESLint` for linting the source code and `Prettier` for the code style.
