--- a/docs/routes/3. Development/3.2. Todo.md
+++ b/docs/routes/3. Development/3.2. Todo.md
@@ -1,3 +1,12 @@
+---
+prev:
+  text: 3.1. Onboarding
+  link: /routes/3.%20Development/3.1.%20Onboarding.html
+next:
+  text: Home
+  link: /
+---
+
 # Todo
 
 These are things that will likely be implemented in the future.
