DX: Reorganise Docs for simplicity

--- a/docs/routes/1. Guide/1.2. Play SoundFont.md
+++ b/docs/routes/1. Guide/1.2. Play SoundFont.md
@@ -3,8 +3,8 @@ prev:
   text: 1.1. Parse SoundFont
   link: /routes/1.%20Guide/1.1.%20Parse%20SoundFont.html
 next:
-  text: 2. API
-  link: /routes/2.%20API/README.html
+  text: 2. SF 2.04 Spec
+  link: /routes/2.%20SF%202.04%20Spec/README.html
 ---
 
 # Play SoundFont
