--- a/docs/routes/4. Development/4.1. Onboarding.md
+++ b/docs/routes/4. Development/4.1. Onboarding.md
@@ -1,10 +1,10 @@
 ---
 prev:
-  text: 2.1.2.2. SampleType
-  link: /routes/2.%20API/2.1.%20SoundFont3/2.1.2.%20Sample/2.1.2.2.%20SampleType.html%20Key.html
+  text: 4. Development
+  link: /routes/4.%20Development/README.html
 next:
-  text: 3.2. Todo
-  link: /routes/3.%20Development/3.2.%20Todo.html
+  text: Home
+  link: /
 ---
 
 # Onboarding
