--- a/docs/routes/2. SF 2.04 Spec/2.2. Sample data.md
+++ b/docs/routes/2. SF 2.04 Spec/2.2. Sample data.md
@@ -17,7 +17,7 @@ SoundFont sample data is accessible through `SoundFont3.sampleData`.
 * Each sample is padded with at least 46 bytes in between.
 * Sample must loop so end point value matches start point value.
 
-### `smpl` - 16-bit WAV
+## `smpl` - 16-bit WAV
 Accessible through `SoundFont3.sampleData`
 
 WAV file in 16 bit signed little endian (least significant byte first).
@@ -28,7 +28,7 @@ char zeroPadding = 0 // >= 46 byte
 // Even number of byte total
 ```
 
-### `sm24` - Plus 8-bit WAV
+## `sm24` - Plus 8-bit WAV
 If 24-bit WAV is provided. The additional 8 bit detail is stored in this chunk. Chunk size should be 1/2 of `smpl`
 
 ```C
