Chore: Format md files for documentation

--- a/docs/routes/2. SF 2.04 Spec/2.1. Metadata.md
+++ b/docs/routes/2. SF 2.04 Spec/2.1. Metadata.md
@@ -8,16 +8,19 @@ next:
 ---
 
 # Metadata
+
 ::: tip Prerequisite
 This section requires a [basic understanding of SoundFont 2.04](/routes/2.%20SF%202.04%20Spec/README.html) and binary.
 :::
 
 SoundFont metadata is accessible through `SoundFont3.metaData`. This data mainly used for library management and player config.
-* Only `ifil`, `isng` and `INAM` are essential.
-* All chunks must have even number of bytes.
-* String chunks must terminate with 1 or 2 byte zero padding.
+
+- Only `ifil`, `isng` and `INAM` are essential.
+- All chunks must have even number of bytes.
+- String chunks must terminate with 1 or 2 byte zero padding.
 
 ## `ifil` - SoundFont version
+
 Accessible through `SoundFont3.metaData.version`.
 
 Version for detecting parsing compatability - v2 and v3 are different.
@@ -30,6 +33,7 @@ uint16_t soundFontVersionMinor = 4 // 2 byte
 ```
 
 ## `isng` - Sound engine
+
 Accessible through `SoundFont3.metaData.soundEngine`
 
 Indentifies wavetable sound engine to use. Default value is "emu8000", also known as the MIDI synth.
@@ -41,6 +45,7 @@ char[] zeroPadding = 0 // 1 or 2 byte
 ```
 
 ## `INAM` - SoundFont bank
+
 Accessible through `SoundFont3.metaData.name`
 
 Name of the [SoundFont bank](https://en.wikipedia.org/wiki/SoundFont#Functionality) for mapping MIDI signals to sample. The default value is "General MIDI".
@@ -52,6 +57,7 @@ char[] zeroPadding = 0 // 1 or 2 byte
 ```
 
 ## `irom` - Sound ROM samples reference
+
 Accessible through `SoundFont3.metaData.rom`
 
 Identifies a particular wavetable sound data ROM. Requires `iver` if defined.
@@ -63,6 +69,7 @@ char[] zeroPadding = 0 // 1 or 2 byte
 ```
 
 ## `iver` - Sound ROM revision
+
 Accessible through `SoundFont3.metaData.romVersion`
 
 Version of wavetable sound data ROM. Requires `irom` if defined.
@@ -75,6 +82,7 @@ uint16_t romVersionMinor = 14 // 2 byte
 ```
 
 ## `ICRD` - Creation mm/dd/yy
+
 Accessible through `SoundFont3.metaData.creationDate`
 
 SoundFont bank creation date in "Month, Day, Year" format. Should ideally be 32 bytes or less. It is mainly used for library management.
@@ -86,6 +94,7 @@ char[] zeroPadding = 0 // 1 or 2 byte
 ```
 
 ## `IENG` - SoundFont author
+
 Accessible through `SoundFont3.metaData.author`
 
 ```C
@@ -95,6 +104,7 @@ char[] zeroPadding = 0 // 1 or 2 byte
 ```
 
 ## `IPDR` - For this product
+
 Accessible through `SoundFont3.metaData.product`
 
 The specific product the SoundFont is intended for.
@@ -106,6 +116,7 @@ char[] zeroPadding = 0 // 1 or 2 byte
 ```
 
 ## `ICOP` - Copyright
+
 Accessible through `SoundFont3.metaData.copyright`
 
 ```C
@@ -115,6 +126,7 @@ char[] zeroPadding = 0 // 1 or 2 byte
 ```
 
 ## `ICMT` - Comments
+
 Accessible through `SoundFont3.metaData.comments`
 
 ```C
@@ -124,6 +136,7 @@ char[] zeroPadding = 0 // 1 or 2 byte
 ```
 
 ## `ISFT` - Tool created SoundFont
+
 Accessible through `SoundFont3.metaData.createdBy`
 
 Name tools used to create or modify soundfont.
