--- a/docs/routes/2. SF 2.04 Spec/2.2. Sample data.md
+++ b/docs/routes/2. SF 2.04 Spec/2.2. Sample data.md
@@ -8,16 +8,19 @@ next:
 ---
 
 # Sample data
+
 ::: tip Prerequisite
 This section requires a [basic understanding of SoundFont 2.04](/routes/2.%20SF%202.04%20Spec/README.html) and binary.
 :::
 
 SoundFont sample data is accessible through `SoundFont3.sampleData`.
-* Samples are WAV files in linear [PCM](https://en.wikipedia.org/wiki/Pulse-code_modulation) format.
-* Each sample is padded with at least 46 bytes in between.
-* Sample must loop so end point value matches start point value.
+
+- Samples are WAV files in linear [PCM](https://en.wikipedia.org/wiki/Pulse-code_modulation) format.
+- Each sample is padded with at least 46 bytes in between.
+- Sample must loop so end point value matches start point value.
 
 ## `smpl` - 16-bit WAV
+
 Accessible through `SoundFont3.sampleData`
 
 WAV file in 16 bit signed little endian (least significant byte first).
@@ -29,6 +32,7 @@ char zeroPadding = 0 // >= 46 byte
 ```
 
 ## `sm24` - Plus 8-bit WAV
+
 If 24-bit WAV is provided. The additional 8 bit detail is stored in this chunk. Chunk size should be 1/2 of `smpl`
 
 ```C
