--- a/docs/routes/1. Guide/1.1. Parse SoundFont.md
+++ b/docs/routes/1. Guide/1.1. Parse SoundFont.md
@@ -8,6 +8,7 @@ next:
 ---
 
 # Parse SoundFont
+
 These examples mainly focus on extracting data.
 
 `SoundFont3` constructor expects a `Uint8Array` binary.
@@ -29,8 +30,8 @@ const soundFont3 = new SoundFont3(soundFontBuffer)
 import { SoundFont3 } from 'SoundFont3'
 
 fetch('https://example.com/my-soundfont.sf3')
-  .then(body => body.arrayBuffer())
-  .then(arrayBuffer => {
+  .then((body) => body.arrayBuffer())
+  .then((arrayBuffer) => {
     // Typecast ArrayBuffer to Uint8Array
     const soundFontBuffer = new Uint8Array(arrayBuffer)
     const soundFont3 = new SoundFont3(soundFontBuffer)
@@ -44,6 +45,7 @@ const metaData = soundFont3.metaData
 ```
 
 Example output:
+
 ```
 {
   version: '2.1',
