Chore: Add example synth

--- a/docs/routes/1. Guide/1.2. Play SoundFont.md
+++ b/docs/routes/1. Guide/1.2. Play SoundFont.md
@@ -13,6 +13,8 @@ next:
 Node.js does not implement AudioContext, which requires monkey patching.
 :::
 
+<Player></Player>
+
 ## With [smplr](https://github.com/danigb/smplr)
 
 First parse the soundfont into [`smplr`](https://github.com/danigb/smplr), which must be installed.
