--- a/docs/routes/2. SF 2.04 Spec/2.3. Preset data.md
+++ b/docs/routes/2. SF 2.04 Spec/2.3. Preset data.md
@@ -27,11 +27,13 @@ Preset data contains references that form a graph structure:
 - Likewise, multiple `instrument zones` can reference one `sample`.
 
 ## Preprocessed data
+
 Preset data that are parsed into an array can be accessed accordingly:
-* Banks - `SoundFont3.banks`
-* Presets - `SoundFont3.presets`
-* Instruments - `SoundFont3.instruments`
-* Samples - `SoundFont3.samples`
+
+- Banks - `SoundFont3.banks`
+- Presets - `SoundFont3.presets`
+- Instruments - `SoundFont3.instruments`
+- Samples - `SoundFont3.samples`
 
 ## `phdr` - Preset headers
 
